# tachyon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.hpp  flake.nix  ir.cpp  ir.hpp  license.md  main.cpp  meson.build  op.hpp  readme.md  visitor.cpp  visitor.hpp  vm.cpp  vm.hpp
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  ctest.yml  test-and-benchmark.yml  tests.yml
apps/tachyon/: CMakeLists.txt
apps/tachyon/src/: main.cpp  repl.cpp  repl.hpp  run.cpp  run.h
benchmarks/: CMakeLists.txt  pipeline_benchmark.cpp  readme.md
docs/architecture/: pipeline.md  readme.md
docs/architecture/optimizations/: lexer.md  readme.md
docs/architecture/pipeline/: pipeline.puml  readme.md
examples/: 00-grammar.tachyon  01-quadratic-formula.tachyon  02-taylor-trigonometry.tachyon  03-factorials.tachyon  04-fibonacci.tachyon  05-jit.tachyon  99-conditionals.tachyon  99-matrices.tachyon  boolean-logic.tachyon  gaussian.tachyon  grammar.tachyon  loops.tachyon  memoization-example.tachyon  memoization.tachyon  one.tachyon  taylor.tachyon
examples/10-neural-networks/: 100-linear-classification.tachyon  100-linear-neural-network.tachyon  101-layered-classification.tachyon  101-quadratic-classification.tachyon  102-sigmoid-layered-classification.tachyon  103-network-with-cost.tachyon  104-simple-gradient-descent.tachyon  105-network-with-gradient-descent.tachyon  106-with-lists.tachyon  107-central-differences.py  107-central-differences.tachyon
examples/11-memoization-optimizations/: 110-memoization.tachyon  111-memoization-memory-cap.tachyon
libs/codegen/: CMakeLists.txt
libs/codegen/benchmarks/: codegen_benchmark.cpp
libs/codegen/benchmarks/data/: 01-basic.tachyon-ast
libs/codegen/include/tachyon/codegen/: bytecode_generator.h  bytecode_generator.hpp  ir_generator.hpp  machine_generator.hpp
libs/codegen/src/: bytecode_generator.cpp  ir_generator.cpp  machine_generator.cpp
libs/common/: CMakeLists.txt
libs/common/include/tachyon/common/: assert.h  error.h  error.hpp  log.h  matrix.h  matrix.hpp  op.h  op.hpp  source_span.h  source_span.hpp
libs/common/tests/: error_test.cpp  matrix_test.cpp
libs/jit/: CMakeLists.txt
libs/lexer/: CMakeLists.txt  keywords.gperf
libs/lexer/benchmarks/: lexer_benchmark.cpp
libs/lexer/benchmarks/data/: 01-basic.tachyon  02-1000-chars.tachyon  03-2000-chars.tachyon  04-5000-chars.tachyon  05-10000-chars.tachyon  06-20000-chars.tachyon  07-big-comment.tachyon
libs/lexer/include/tachyon/lexer/: keyword_hash.h  keyword_hash.hpp  lexer.h  lexer.hpp  token.h  token.hpp
libs/lexer/src/: lexer.cpp
libs/lexer/tests/: lexer_test.cpp
libs/parser/: CMakeLists.txt
libs/parser/benchmarks/: parser_benchmark.cpp
libs/parser/benchmarks/data/: 01-basic.tachyon-tokens  02-100-tokens.tachyon-tokens  03-200-tokens.tachyon-tokens  04-500-tokens.tachyon-tokens  05-1000-tokens.tachyon  05-1000-tokens.tachyon-tokens  06-2000-tokens.tachyon-tokens
libs/parser/include/tachyon/parser/: ast.h  ast.hpp  op.h  parser.h  parser.hpp  print.h  print.hpp
libs/parser/src/: ast.cpp  parser.cpp  print.cpp
libs/runtime/: CMakeLists.txt
libs/runtime/benchmarks/: vm_benchmark.cpp
libs/runtime/benchmarks/data/: 00-blank.tachyon-bytes  01-basic.tachyon-bytes
libs/runtime/include/tachyon/runtime/: bytecode.h  cache.h  cache.hpp  call_frame.h  call_frame.hpp  matrix.h  proto.h  proto.hpp  value.h  value.hpp  vm.h  vm.hpp
libs/runtime/src/: cache.cpp  value.cpp  vm.cpp
libs/runtime/tests/: matrix_test.cpp
src/: ast.cpp  ast.cppm  ast.h  bytecode.hpp  error.cppm  error.h  error.hpp  lexer.cpp  lexer.cppm  lexer.h  main.cpp  op.cppm  op.h  op.hpp  parser.cpp  parser.cppm  parser.h  proto.hpp  register_allocator.hpp  vm.cpp  vm.cppm  vm.h  vm.hpp
src/ast/: ast.cpp  ast.cppm  ast.hpp  visitor.cpp  visitor.hpp
src/ast/visitors/: lowering_visitor.cpp  lowering_visitor.hpp  optimization_visitor.cpp  optimization_visitor.hpp  print_visitor.cpp  print_visitor.hpp  tree_visitor.cpp  tree_visitor.hpp  visitor.hpp
src/ir/: ir.hpp  visitor.cpp  visitor.hpp
src/lexer/: lexer.cpp  lexer.cppm  lexer.hpp
src/parser/: parser.cpp  parser.cppm  parser.hpp  tokenizer.cpp  tokenizer.hpp
src/vm/: proto.hpp  register_allocator.hpp  vm.cpp  vm.cppm  vm.hpp
tests/: CMakeLists.txt  readme.md
tests/integration/: array_test.cpp  comparison_test.cpp  pipeline_test.cpp
